--- a/Clones/Tela_de_login_da_Twitch/Tela de Login/index.html
+++ b/Clones/Tela_de_login_da_Twitch/Tela de Login/index.html
@@ -29,7 +29,7 @@
             <input type="password" id="senha" name="senha">
 
             <!-- Link de ajuda para palavra-passe -->
-            <a href="./probelma_ao_iniciar_sessao.html">Problema ao iniciar sessão?</a>
+            <a href="../Problema_ao_iniciar_sessao/index.html">Problema ao iniciar sessão?</a>
 
              <!-- Botão de envio -->
             <button class="btn" type="submit">Iniciar sessão</button>
