--- a/Clones/Tela_de_login_da_Twitch/Criar_conta/index.html
+++ b/Clones/Tela_de_login_da_Twitch/Criar_conta/index.html
@@ -11,8 +11,30 @@
     <main class="container">
 
         <div class="main_content">
+            <i class="fab fa-twitch"></i>
             <h1>Junta-te ja à Twitch</h1>
         </div>
+
+        <form action="" method="post">
+
+            <!-- ID Nome e Senha -->
+            <div id="name_password">
+
+                <label for="name">Nome de utilizador</label>
+                <input type="text" name="nome" id="name">
+
+                <label for="password">Password</label>
+                <input type="password" name="senha" id="password">
+
+            </div>
+
+            <div id="data">
+                <label for="data">Data de nascimento</label>
+                <input type="date" name="" id="">
+            </div>
+
+
+        </form>
 
     </main>
     
