--- a/Clones/Tela_de_login_da_Twitch/Criar_conta/index.html
+++ b/Clones/Tela_de_login_da_Twitch/Criar_conta/index.html
@@ -29,8 +29,54 @@
             </div>
 
             <div id="data">
+                
                 <label for="data">Data de nascimento</label>
-                <input type="date" name="" id="">
+                <section class="section day">
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03"></option>
+                    <option value="04"></option>
+                    <option value="05"></option>
+                    <option value="06"></option>
+                    <option value="07"></option>
+                    <option value="08"></option>
+                    <option value="09"></option>
+                    <option value="10"></option>
+                    <option value="11"></option>
+                    <option value="12"></option>
+                    <option value="13"></option>
+                    <option value="14"></option>
+                    <option value="15"></option>
+                    <option value="16"></option>
+                    <option value="17"></option>
+                    <option value="18"></option>
+                    <option value="19"></option>
+                    <option value="20"></option>
+                    <option value="21"></option>
+                    <option value="22"></option>
+                    <option value="23"></option>
+                    <option value="24"></option>
+                    <option value="25"></option>
+                    <option value="26"></option>
+                    <option value="27"></option>
+                    <option value="28"></option>
+                    <option value="29"></option>
+                    <option value="30"></option>
+                </section>
+
+                <label for="ano">Ano:</label>
+                    <select id="ano" name="ano">
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2023">2023</option>
+                        <option value="2024">2024</option>
+                        <!-- Adicione mais anos conforme necessário -->
+                    </select>
+
+
+
+
             </div>
 
 
