--- a/Clones/Tela_de_login_da_Twitch/Criar_conta/index.html
+++ b/Clones/Tela_de_login_da_Twitch/Criar_conta/index.html
@@ -33,15 +33,15 @@
                 
                 <label for="data">Data de nascimento</label>
                 <select class="height" id="dia" name="dia">
-                    <option  value="" disabled selected>Dia</option>
+                    <option value="" disabled selected>Dia</option>
                 </select>
 
                 <select class="height"id="mes" name="mes">
-                    <option  value="" disabled selected>Mês</option>
+                    <option value="" disabled selected>Mês</option>
                 </select>
 
                 <select class="height"id="ano" name="ano">
-                    <option  value="" disabled selected>Ano</option>
+                    <option value="" disabled selected>Ano</option>
                 </select>
 
             </div>
@@ -52,23 +52,24 @@
                     <select id="section_phone" name="ci">
                         <option id="ddd" value="" disabled selected>Brasil +55</option>
                     </select>
-                    <input type="tel" name="tel" id="phone" placeholder="Digite seu telefone">
+                    <input type="tel" name="tel" class="phone">
                 </div>
                 <button class="btn-email" type="submit">Utilizar antes e-mail</button>
             </div>
-
 
             <div class="texts">
                 <p>A Twitch pode utilizar o teu número de telefone para te ligar ou enviar
                      mensagens de texto com informação sobre a tua conta.
                 </p>
 
-                <p>Ao clicares em inscrever-se, estás a concordar com os <a href="#">Termos de Serviço</a>
-                    da Twitch e a reconhecer a aplicação do nosso <a href="#">Aviso de Previdencia</a>.</p>                
+                <p>Ao clicares em inscrever-se, estás a concordar com os <a class="link" href="#">Termos de Serviço</a>
+                    da Twitch e a reconhecer a aplicação do nosso <a class="link" href="#">Aviso de Previdencia</a>.</p>                
             </div>
 
-            <button type="submit">Inscrever</button>
-            <button type="submit">Tens uma conta? Iniciar sessão</button>
+            <div class="last_btns">
+                <button class="btn btn1" type="submit">Inscrever</button>
+                <button class="btn btn2" type="submit">Tens uma conta? Iniciar sessão</button>
+            </div>
 
         </form>
 
