arquivos alterados com sucesso

--- a/Clones/Tela_de_login_da_Twitch/Criar_conta/index.html
+++ b/Clones/Tela_de_login_da_Twitch/Criar_conta/index.html
@@ -33,15 +33,15 @@
                 
                 <label for="data">Data de nascimento</label>
                 <select class="height" id="dia" name="dia">
-                    <option value="" disabled selected>Dia</option>
+                    <option disabled selected>Dia</option>
                 </select>
 
                 <select class="height"id="mes" name="mes">
-                    <option value="" disabled selected>Mês</option>
+                    <option disabled selected>Mês</option>
                 </select>
 
                 <select class="height"id="ano" name="ano">
-                    <option value="" disabled selected>Ano</option>
+                    <option disabled selected>Ano</option>
                 </select>
 
             </div>
@@ -50,11 +50,11 @@
                 <label for="phone">Número de Telefone</label>
                 <div class="phone-row">
                     <select id="section_phone" name="ci">
-                        <option id="ddd" value="" disabled selected>Brasil +55</option>
+                        <option id="ddd" disabled selected>Brasil +55</option>
                     </select>
-                    <input type="tel" name="tel" class="phone">
+                    <input type="tel" name="tel" id="phone">
                 </div>
-                <button class="btn-email" type="submit">Utilizar antes e-mail</button>
+                <button class="btn-email" type="submit" disabled>Utilizar antes e-mail</button>
             </div>
 
             <div class="texts">
@@ -67,8 +67,8 @@
             </div>
 
             <div class="last_btns">
-                <button class="btn btn1" type="submit">Inscrever</button>
-                <button class="btn btn2" type="submit">Tens uma conta? Iniciar sessão</button>
+                <button class="btn btn1" type="submit" disabled>Inscrever</button>
+                <button class="btn btn2" type="submit" disabled>Tens uma conta? Iniciar sessão</button>
             </div>
 
         </form>
