--- a/Clones/Tela_de_login_da_Twitch/Tela de Login/index.html
+++ b/Clones/Tela_de_login_da_Twitch/Tela de Login/index.html
@@ -35,7 +35,7 @@
             <button class="btn" type="submit">Iniciar sessão</button>
 
              <!-- Botão para criar conta -->
-            <button class="btn" type="submit">Não tens uma conta? Inscrever-se</button>
+            <button class="btn" type="submit"><a class="link_btn" href="../Criar_conta/index.html">Não tens uma conta? Inscrever-se</a></button>
 
         </form>
 
