Twitch Clone Finalizado

--- a/Clones/Tela_de_login_da_Twitch/1_Tela de Login/index.html
+++ b/Clones/Tela_de_login_da_Twitch/1_Tela de Login/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="shortcut icon" href="./img/twitch-55.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../x_img/twitch-55.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media-queries.css">
     <title>Iniciar sessão - Twitch</title>
 </head>
 <body>
@@ -28,14 +29,14 @@
             <label for="senha">Palavra-passe</label>
             <input type="password" id="senha" name="senha">
 
-            <!-- Link de ajuda para palavra-passe -->
-            <a href="../Problema_ao_iniciar_sessao/index.html">Problema ao iniciar sessão?</a>
+            <!-- Link de ajuda -->
+            <a href="../2_Problema_ao_iniciar_sessao/index.html">Problema ao iniciar sessão?</a>
 
              <!-- Botão de envio -->
             <button class="btn" type="submit">Iniciar sessão</button>
 
              <!-- Botão para criar conta -->
-            <button class="btn" type="submit"><a class="link_btn" href="../Criar_conta/index.html">Não tens uma conta? Inscrever-se</a></button>
+            <button class="btn" type="submit"><a class="link_btn" href="../3_Criar_conta/index.html">Não tens uma conta? Inscrever-se</a></button>
 
         </form>
 
