--- a/Clones/Tela_de_login_da_Twitch/3_Criar_conta/index.html
+++ b/Clones/Tela_de_login_da_Twitch/3_Criar_conta/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
     <title>Inscrever-se</title>
 </head>
-
 <body>
 
     <!-- Container -->
@@ -66,6 +64,8 @@
                 <button class="btn-email" type="submit" disabled>Utilizar antes e-mail</button>
             </div>
 
+            <!-- Descrição / Termos -->
+
             <div class="texts">
                 <p>A Twitch pode utilizar o teu número de telefone para te ligar ou enviar
                     mensagens de texto com informação sobre a tua conta.
@@ -74,6 +74,8 @@
                 <p>Ao clicares em inscrever-se, estás a concordar com os <a class="link" href="#">Termos de Serviço</a>
                     da Twitch e a reconhecer a aplicação do nosso <a class="link" href="#">Aviso de Previdencia</a>.</p>
             </div>
+
+            <!-- Botões -->
 
             <div class="last_btns">
                 <button class="btn btn1" type="submit" disabled>Inscrever</button>
